finished husky prepare script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "jest",
-    "prepare": "husky install .husky && npx husky-init -y  && npx husky set .husky/pre-commit \"npm run pre-commit\"",
+    "prepare": "husky install .husky && npx husky-init -y  && npx husky set .husky/pre-commit \"npm run precommit\"",
     "dev": "nodemon",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "build": "tsc -p tsconfig.json",
