--- a/package.json
+++ b/package.json
@@ -14,12 +14,30 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
+  "author": {
+    "name": "vAndrewKarma",
+    "email": "karma.andrew16@gmail.com"
+  },
+  "keywords": [
+    "node",
+    "node.js",
+    "boilerplate",
+    "express",
+    "jest",
+    "husky",
+    "eslint",
+    "prettier"
+  ],
   "scripts": {
     "test": "jest",
     "prepare": "husky install .husky && npx husky-init -y  && npx husky set .husky/pre-commit \"npm run precommit\"",
     "dev": "nodemon",
+    "prettier": "prettier --check **/*.js",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "build": "tsc -p tsconfig.json",
+    "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . --fix",
+    "coverage": "jest -i --coverage",
+    "coverage:coveralls": "jest -i --coverage --coverageReporters=text-lcov | coveralls",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "ready": "npm run format && npm run lint && npm run build",
     "precommit": "lint-staged --allow-empty"
