--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/jest": "^29.5.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.41.0",
@@ -12,6 +13,7 @@
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
