--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "precommit": "lint-staged --allow-empty"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "winston": "^3.8.2"
   }
 }
