--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "express-typescript-starter",
+  "description": "A simple Express-Typescript starter kit, which can be used in building your next great project",
+  "version": "1.0.0",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
