--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       PORT: 3000
       NODE_ENV: development
       CLIENT: http://localhost:3000
-      
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,3 +29,4 @@ jobs:
     - run: npm ci
     - run: npm run ready
     - run: npm test
+    - run: echo $PORT
