--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         
     steps:
     - uses: actions/checkout@v2
-    - name: Usse Node.js ${{matrix.node-version}}
+    - name: Testing - version ${{matrix.node-version}}
       uses: actions/setup-node@v2
       with:
         node-version: ${{matrix.node-version}}
