--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 
 jobs:
-  build:
+  test:
     env:
       PORT: 3000
       NODE_ENV: development
@@ -20,9 +20,9 @@ jobs:
         node-version: [18.x]
         
     steps:
-    - uses: actions/checkout@v2
-    - name: Testing - version ${{matrix.node-version}}
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
       with:
         node-version: ${{matrix.node-version}}
         cache: 'npm'
