--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,25 +8,45 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    env:
-      PORT: ${{secrets.PORT}}
-      NODE_ENV: ${{secrets.NODE_ENV}}
-      CLIENT: ${{secrets.CLIENT}}
-
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-        
-    steps:
-    - uses: actions/checkout@v3
-    - name: TEST - NODE  ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{matrix.node-version}}
-        cache: 'npm'
-    - run: npm ci
-    - run: echo $PORT
-    - run: npm test
+  
+    build:
+      runs-on: ubuntu-latest
+      env:
+        PORT: ${{secrets.PORT}}
+        NODE_ENV: ${{secrets.NODE_ENV}}
+        CLIENT: ${{secrets.CLIENT}}
+      strategy:
+        matrix:
+          node-version: [18.x]
+          
+      steps:
+      - uses: actions/checkout@v3
+      - name: TEST - NODE  ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{matrix.node-version}}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm ready
     
+    
+    test:
+        needs: build
+    
+        runs-on: ubuntu-latest
+    
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v3
+    
+          - name: Set up Node.js
+            uses: actions/setup-node@v3
+            with:
+              node-version: '14'
+              cache: 'npm'
+    
+          - name: Install dependencies
+            run: npm ci
+    
+          - name: Run tests
+            run: npm test
