--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: ${{matrix.node-version}}
           cache: 'npm'
       - run: npm ci
-      - run: npm ready
+      - run: npm run ready
     
     
     test:
