--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,17 +24,16 @@ jobs:
       - name: TEST - NODE  ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: '18'
           cache: 'npm'
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
+
       - run: npm run ready
-    
     
     test:
         needs: build
-    
         runs-on: ubuntu-latest
-    
         steps:
           - name: Checkout code
             uses: actions/checkout@v3
@@ -42,11 +41,7 @@ jobs:
           - name: Set up Node.js
             uses: actions/setup-node@v3
             with:
-              node-version: '14'
-              cache: 'npm'
-    
-          - name: Install dependencies
-            run: npm ci
-    
+              node-version: '18'
+              cache: 'npm'    
           - name: Run tests
-            run: npm test
+            run: npm run test
