fixed workflow i hope 3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,6 @@ jobs:
             with:
               node-version: '18'
               cache: 'npm'    
+          - run: npm ci    
           - name: Run tests
             run: npm run test
