--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,54 +4,45 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
+    branches: [main] 
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      PORT: ${{secrets.PORT}}
-      NODE_ENV: ${{secrets.NODE_ENV}}
-      CLIENT: ${{secrets.CLIENT}}
-    strategy:
-      matrix:
-        node-version: [18.x]
-        
-    steps:
+  
+    build:
+      runs-on: ubuntu-latest
+      env:
+        PORT: ${{secrets.PORT}}
+        NODE_ENV: ${{secrets.NODE_ENV}}
+        CLIENT: ${{secrets.CLIENT}}
+      strategy:
+        matrix:
+          node-version: [18.x]
+          
+      steps:
       - uses: actions/checkout@v3
       - name: TEST - NODE  ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-build-
       - name: Install dependencies
         run: npm ci
 
       - run: npm run ready
     
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'    
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-test-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-test-
-      - name: Run tests
-        run: npm run test
+    test:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v3
+    
+          - name: Set up Node.js
+            uses: actions/setup-node@v3
+            with:
+              node-version: '18'
+              cache: 'npm'  
+          - name: Installing dependencies
+            run: npm ci    
+          - name: Run tests
+            run: npm run test
