--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,11 +40,26 @@ jobs:
         with:
           category: "/language:${{ matrix.language }}"
 
-  dependency-review:
-    name: Dependency Review
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Dependency Review
-        uses: actions/dependency-review-action@v2
+  eslint:
+      name: Run eslint scanning
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3  
+        - name: Install ESLint
+          run: |
+                  npm install eslint@8.10.0
+                  npm install @microsoft/eslint-formatter-sarif@2.1.7
+        - name: Run ESLint
+          run: npx eslint .
+                  --config .eslintrc.js
+                  --ext .js,.jsx,.ts,.tsx
+                  --format @microsoft/eslint-formatter-sarif
+                  --output-file eslint-results.sarif
+          continue-on-error: true
+        
+        - name: Upload analysis results to GitHub
+          uses: github/codeql-action/upload-sarif@v2
+          with:
+                  sarif_file: eslint-results.sarif
+                  wait-for-processing: true 
