--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.41.0",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
@@ -40,11 +37,9 @@
     "prepare": "husky install .husky && npx husky-init -y  && npx husky set .husky/pre-commit \"npm run precommit\"",
     "dev": "nodemon",
     "prettier": "prettier --check **/*.js",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "build": "tsc -p tsconfig.json",
-    "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "ready": "npm run format && npm run lint && npm run build",
+    "ready": "npm run format && npm run build",
     "precommit": "lint-staged --allow-empty"
   },
   "dependencies": {
