--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,7 @@
 {
+    "src/**/*.+(js|json|ts|tsx)": [
+      "eslint"
+    ],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
