--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main] 
+  schedule:
+    - cron: '17 13 * * 5'
   workflow_dispatch:
 
 jobs:
